old/infra/elasticsearch/default/kibana-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: kibana-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: kibana-http-port
      protocol: HTTP
    hosts:
      - kibana.simplefxn.com
    tls:
      httpsRedirect: true
  - port:
      number: 443
      name: kibana-https-port
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: kibana.simplefxn.com
    hosts:
      - kibana.simplefxn.com
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kibana-vs
  namespace: istio-system
spec:
  hosts:
  - "kibana.simplefxn.com"
  gateways:
  - kibana-gateway
  http:
  - route:
    - destination:
        host: kibana-kb-http.infra.svc.cluster.local
        port:
          number: 5601
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: kibana
  namespace: istio-system
spec:
  host: kibana-kb-http.infra.svc.cluster.local
  trafficPolicy:
    tls:
      mode: DISABLE
